# Lateblight

./: .gitignore  Jenkinsfile  README.md
new version/Lateblight_app/: Dockerfile  simcast_model_function.R
new version/Lateblight_app/app/: fungicide.R  potato-res-data.csv  potato-res-india.csv  potato-res-per.csv  server.R  strTable.csv  ui.R
new version/Lateblight_app/app/temp/: potato-res-ecu.csv
new version/Lateblight_app/app/www/: custom.css
older version/October2023_V1.0/: shiny-app-simple.rar
older version/October2023_V1.0/shiny-app-simple/: server.R
older version/shiny-app-simple/: potato-res-ecu.csv  potato-res-per.csv  server.R  ui.R
older version/shiny-app-simple/rsconnect/shinyapps.io/marvinjonathcn/: DSSA-LATEBLIGHT.dcf
py_version/: .dockerignore  .gitignore  Dockerfile  app.py  app2.py  contruct_chromadb.py  docker-compose.yml  pyproject.toml  requirements.txt
py_version/data/: potato-res-data.csv
py_version/data/chromadb/d4825a12-cc9c-47e7-bf46-f42084cc6ff2/: index_metadata.pickle
py_version/modules/: img.py
py_version/tools/: utils.py
py_version/www/css/: app2.css  styles.css
py_version/www/js/: app2.js
